# Datablaze

./: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
src-tauri/src/database/: mod.rs  mysql.rs  postgres.rs  sqlite.rs  sqlserver.rs
src/components/Connection/: ConnectionForm.tsx  DatabaseSelector.tsx  ManageConnectionsModal.tsx
src/components/Editor/: SqlEditor.tsx
src/components/Explorer/: DatabaseTree.tsx  TableStructure.tsx
src/components/Results/: JsonViewer.tsx  ResultsPanel.tsx
src/components/SavedQueries/: SavedQueriesModal.tsx
src/components/Settings/: SettingsModal.tsx
src/components/Structure/: StructureView.tsx
src/components/UI/: DatabaseIcon.tsx  Modal.tsx  TitleBar.tsx
src/lib/: settingsManager.ts  storage.ts  tauri.ts
src/stores/: connectionStore.ts
